added assets folder, styled top panel

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Test
+    <div class="piano">
+        <div class="piano-panel">
+            <img src="images/panel-logo.png" alt="panel-logo">
+        </div>
+        <div class="piano-keys">
+            <div class="key key-white"></div>
+            <!-- <div class="key key-black"></div> -->
+        </div>
+    </div>
 </body>
 </html>
