added the right key layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
         </div>
         <div class="piano-keys">
             <div class="key key-white"></div>
-            <!-- <div class="key key-black"></div> -->
+            <div class="key key-black"></div>
+            <div class="key key-white"></div>
+            <div class="key key-black"></div>
+            <div class="key key-white"></div>
+            <div class="key key-white"></div>
+            <div class="key key-black"></div>
+            <div class="key key-white"></div>
+            <div class="key key-black"></div>
+            <div class="key key-white"></div>
+            <div class="key key-black"></div>
+            <div class="key key-white"></div>
         </div>
     </div>
 </body>
