--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
             <img src="images/panel-logo.png" alt="panel-logo">
         </div>
         <div class="piano-keys">
-            <div class="key key-white"></div>
-            <div class="key key-black"></div>
-            <div class="key key-white"></div>
-            <div class="key key-black"></div>
-            <div class="key key-white"></div>
-            <div class="key key-white"></div>
-            <div class="key key-black"></div>
-            <div class="key key-white"></div>
-            <div class="key key-black"></div>
-            <div class="key key-white"></div>
-            <div class="key key-black"></div>
-            <div class="key key-white"></div>
+            <div class="key key-white" id="do"></div>
+            <div class="key key-black" id="dodiesis"></div>
+            <div class="key key-white" id="re"></div>
+            <div class="key key-black" id="rediesis"></div>
+            <div class="key key-white" id="mi"></div>
+            <div class="key key-white" id="fa"></div>
+            <div class="key key-black" id="fadiesis"></div>
+            <div class="key key-white" id="sol"></div>
+            <div class="key key-black" id="soldiesis"></div>
+            <div class="key key-white" id="la"></div>
+            <div class="key key-black" id="ladiesis"></div>
+            <div class="key key-white" id="si"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
